Names refactored to make more cohesive